[package]
name = "led-json"
version = "0.1.0"
authors = ["Spike Grobstein <me@spike.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.60"
serde = { version = "1.0", features = ["derive"] }
void = "1.0.2"
thiserror = "1.0.24"
